--- a/packages/index.html
+++ b/packages/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>uHost</title>
-    <link rel="shortcut icon" href="favicon.png">
+    <link rel="shortcut icon" href="../favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../shared.css"/>
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+<div class="background"></div>
 <header class="main-header">
     <div>
         <a href="../index.html" class="main-header__brand">
@@ -36,6 +37,7 @@
     <section class="package" id="plus">
         <a href="#">
             <h1 class="package__title">Our PLUS Plan</h1>
+            <h2 class="package__badge">RECOMMENDED</h2>
             <h2 class="package__subtitle">The most popular choice of our customers.</h2>
             <p class="package__info">Benefit from increased storage and faster support to ensure that your mission-critical data and
                 applications
